@@ -27,8 +27,10 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     fe.exec.commands 'script/start_test_backend', directory: '/vagrant/src/api'
     fe.exec.commands 'contrib/start_development_backend', directory: '/vagrant'
     fe.exec.commands '*', directory: '/vagrant'
+    fe.exec.commands 'script/start_mailcatcher', directory: '/vagrant/src/api'
     fe.vm.network :forwarded_port, guest: 3000, host: 3000
     fe.vm.network :forwarded_port, guest: 3306, host: 3306
+    fe.vm.network :forwarded_port, guest: 1080, host: 1080
 
     # FIXME: Setting group/owner is a temporary fix for
     # https://github.com/mitchellh/vagrant/issues/7616
