@@ -1,0 +1,11 @@
+<% notifications.each do |notification| %>
+  <%= render(
+        template: "event_mailer/#{notification.template_name}",
+        locals: { event: notification.event.expanded_payload },
+        layout: false
+      )
+    %>
+  <% unless notification == notifications.last %>
+    <p>---</p>
+  <% end %>
+<% end %>
