@@ -1,0 +1,12 @@
+<% notifications.each do |notification| %>
+<%= render(
+      template: "event_mailer/#{notification.template_name}",
+      locals: { event: notification.event.expanded_payload },
+      layout: false
+    )
+  %>
+  <% unless notification == notifications.last %>
+---
+
+  <% end %>
+<% end %>
