@@ -1,0 +1,3 @@
+<p>Package was branched:</p>
+
+<p><%= event['project']%> <%= event['package']%> was branched to <%= event['targetproject']%> <%= event['targetpackage']%> by user <%= event['user']%></p>
