@@ -1,0 +1,11 @@
+Visit <%= url_for(controller: 'webui/package', action: :live_build_log, project: event['project'], package: event['package'], repository: event['repository'], arch: event['arch'], only_path: false, host: @host) %>
+
+Package <%= event['project'] %>/<%= event['package']%> failed to build in <%= event['repository']%>/<%= event['arch']%>
+
+Check out the package for editing:
+  osc checkout <%= event['project']%> <%= event['package']%>
+<% if event['faillog'] -%>
+
+Last lines of build log:
+<%= event['faillog'] %>
+<% end %>
