@@ -1,0 +1,27 @@
+<p>
+  Committer: <%= event['user']%>
+  <br>
+  New Revision: <%= event['rev']%>
+</p>
+
+<p>
+  Log:
+  <br>
+  <%= event['comment']%>
+</p>
+
+<p><%= event['files']%></p>
+
+<p><%= event['diff']%></p>
+
+<p>
+  To compare against the previous version:
+  <br>
+     osc rdiff <%= event['project']%> <%= event['package']%>
+</p>
+
+<p>
+  Check out the package for editing:
+  <br>
+     osc checkout <%= event['project']%> <%= event['package']%>
+</p>
