@@ -1,0 +1,3 @@
+<p>A new package named <%= event['package']%> was created in <%= event['project']%></p>
+
+<p><%= url_for(project: event['project'], package: event['package'], controller: 'webui/package', action: :show, only_path: false, host: @host) %></p>
