@@ -1,0 +1,4 @@
+<p>A new Project was created: <%= event['project']%></p>
+
+<p><%= url_for(project: event['project'], controller: 'webui/project', action: :show, only_path: false, host: @host) %></p>
+
