@@ -1,0 +1,13 @@
+<p>
+  @subject: [obs del] Package <%= event['package']%> from <%= event['project']%> deleted
+  <br>
+  Package <%= event['package']%> from project <%= event['project']%> was deleted
+  <br>
+  by user <%= event['sender']%>.
+</p>
+
+<p><%= event['comment']%></p>
+
+<% if event['requestid']-%>
+  <p>Check delete request: osc request log <%= event['requestid']%></p>
+<%-end-%>
