@@ -1,0 +1,7 @@
+<p>
+  @subject: [obs del] Project <%= event['project']%> deleted
+  <br>
+  Project <%= event['project']%> was deleted.
+</p>
+
+<p><%= event['comment']%></p>
