@@ -1,0 +1,23 @@
+<p>@subject: <%= event['type']%>-Request <%= event['number']%> Changed</p>
+
+<p><%= event['type']%>-Request was changed, new state: <%= event['state']%></p>
+
+<% if event['sourceproject']-%>
+  <p>
+    Source
+      <br>
+      project:  <%= event['sourceproject']%>
+      <br>
+      package:  <%= event['sourcepackage']%>
+      <br>
+      <% if event['sourcerevision']-%>  revision: <%= event['sourcerevision']%><%-end-%>>
+  </p>
+
+  <p>
+  Target:
+    <br>
+    project: <%= event['targetproject']%>
+    <br>
+    package: <%= event['targetpackage']%>
+  </p>
+<%-end-%>
