@@ -1,0 +1,7 @@
+<p>@subject: Request <%= event['number']%> was Deleted!</p>
+
+<p>
+  The <%= event['type']%>-Request with id <%= event['number']%> was deleted
+  <br>
+  by <%= event['who']%>.
+</p>
