@@ -1,0 +1,15 @@
+<p>Visit <%= url_for(controller: 'webui/request', action: :show, number: event['number'], host: @host, only_path: false) %></p>
+
+<p>State of request <%= event['number']%> was changed by <%= event['who']%>:</p>
+
+  <p><%= event['oldstate']%> -> <%= event['state']%></p>
+
+<% if event['comment'].present? -%>
+  <p>
+    Comment:
+    <br>
+    <%= event['comment'] %>
+  </p>
+<% end -%>
+<br>
+<%= render partial: 'actions', locals: { event: event } %>
