@@ -1,0 +1,3 @@
+@subject: [obs update] Package <%= event['package']%> in <%= event['project']%> updated
+<br>
+The package <%= event['package']%> in <%= event['project']%> was updated.
