@@ -1,0 +1,7 @@
+<p>
+  @subject: [obs update] Project Config of <%= event['project']%> updated
+  <br>
+  The project config of project <%= event['project']%> was updated.
+</p>
+
+<p><%= url_for(project: event['project'], controller: 'webui/project', action: :show, only_path: false, host: @host) %></p>
