@@ -1,0 +1,9 @@
+<p>
+  @subject: File Upload for Package <%= event['package']%> in <%= event['project']%>
+  <br>
+  The file: <%= event['filename']%>
+  <br>
+  was uploaded into package <%= event['package']%> in project <%= event['project']%> by user <%= event['user']%>
+</p>
+
+<p>Comment: <%= event['comment']%></p>
