@@ -19,7 +19,8 @@ OBSApi::Application.configure do
   # Don't care if the mailer can't send
   config.action_mailer.raise_delivery_errors = false
 
-  config.action_mailer.delivery_method = :test
+  config.action_mailer.delivery_method = :smtp
+  config.action_mailer.smtp_settings = { address: '0.0.0.0', port: 1025 }
 
   # Print deprecation notices to the Rails logger
   config.active_support.deprecation = :log
