@@ -33,6 +33,7 @@ UI:
  * Users can see the job history list of a specific package via the package binaries page
  * New GPG key details dialog
  * RSS Feeds for User's Notifications is now available
+ * Daily email option is now available which sends you one email which contains all of the day's notifications
 
 API:
  * Kerberos authentication mode
